[project]
name = "easyllm"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Built upon Megatron-Deepspeed and HuggingFace Trainer, EasyLLM has reorganized the code logic with a focus on usability. While enhancing usability, it also ensures training efficiency."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ['llm']
